tests/require_annotation/pod-with-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-annotation
  namespace: default
  annotations:
    corp.org/department: whatever
  labels:
    run: nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
