tests/require_annotation/pod-without-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-without-annotation
  namespace: default
  labels:
    run: nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
